@@ -1,8 +1,8 @@
 defaults: &defaults
   apps_dir: <%= Rails.root.join('user_apps') %>
-  rimrock: https://submit.plgrid.pl
-  plgdata: https://data.plgrid.pl
-  datanet: https://paas.datanet.plgrid.pl
+  rimrock: <%= ENV['RIMROCK_URL'] || 'https://submit.plgrid.pl' %>
+  plgdata: <%= ENV['PLGDATA_URL'] || 'https://data.plgrid.pl' %>
+  datanet: <%= ENV['DATANET_URL'] || 'https://paas.datanet.plgrid.pl' %>
   dev_postfix: "-dev"
 
 development:
